--- a/Secao-5-CSS3-Intermediario-e-avancado/css/estilo.css
+++ b/Secao-5-CSS3-Intermediario-e-avancado/css/estilo.css
@@ -51,6 +51,53 @@ h1+p {
 */
 
 /* Seletor de irmão geral */
+/*
 h1~p {
   color: pink;
+}
+*/
+
+/**********/
+/* Herança e especificidade */
+/*
+body {
+  color: red;
+  border: 1px solid blue;
+}
+*/
+
+/* Seletores iguais, exceção important */
+/*
+#pagina p {
+  color: red !important;
+}
+
+#pagina p {
+  color: blue;
+}
+*/
+
+/*
+  Se um seletor for mais específico que outro,
+  a regra mais específica será aplicada
+  (terá precedência sobre regras mais gerais)
+*/
+/* 4 */
+* {
+  color: red;
+}
+
+/* 3 */
+h2 {
+  color: blue;
+}
+
+/* 2 */
+h2.verde {
+  color: green;
+}
+
+/* 1 */
+h2#amarelo {
+  color: yellow;
 }
