--- a/Secao-5-CSS3-Intermediario-e-avancado/css/estilo.css
+++ b/Secao-5-CSS3-Intermediario-e-avancado/css/estilo.css
@@ -83,21 +83,67 @@ body {
   (terá precedência sobre regras mais gerais)
 */
 /* 4 */
+/*
 * {
   color: red;
 }
+*/
 
 /* 3 */
+/*
 h2 {
   color: blue;
 }
+*/
 
 /* 2 */
+/*
 h2.verde {
   color: green;
 }
+*/
 
 /* 1 */
+/*
 h2#amarelo {
   color: yellow;
+}
+*/
+
+/**********/
+/* Barra de navegação vertical */
+/*
+ul {
+
+  list-style-type: none;
+  margin: 0px;
+  padding: 0;
+}
+
+li {
+  padding: 5px 20px;
+  background: url("../imagens/seta.png") no-repeat left center;
+}
+*/
+
+ul {
+  margin: 0px;
+  padding: 0px;
+  list-style-type: none;
+}
+
+ul a {
+  width: 200px;
+  height: 40px;
+  display: block;
+  background: url(../imagens/menu.png) no-repeat left bottom;
+  color: #000;
+  text-decoration: none;
+  text-indent: 40px;
+  line-height: 40px;
+}
+
+a:hover {
+  background-position: right bottom;
+  color: #fff
 }
