--- a/Secao-5-CSS3-Intermediario-e-avancado/css/estilo.css
+++ b/Secao-5-CSS3-Intermediario-e-avancado/css/estilo.css
@@ -136,7 +136,7 @@ ul a {
   width: 200px;
   height: 40px;
   display: block;
-  background: url(../imagens/menu.png) no-repeat left bottom;
+  background: #f7b600 url(../imagens/menu.png) no-repeat left bottom;
   color: #000;
   text-decoration: none;
   text-indent: 40px;
@@ -145,5 +145,14 @@ ul a {
 
 a:hover {
   background-position: right bottom;
+  background-color: #f99200;
+  color: #fff
+}
+
+#home #navegacao .home a,
+#sobre #navegacao .sobre a,
+#servicos #navegacao .servicos a {
+  background-position: right bottom;
+  background-color: #f99200;
   color: #fff
 }
