--- a/Secao-5-CSS3-Intermediario-e-avancado/css/estilo.css
+++ b/Secao-5-CSS3-Intermediario-e-avancado/css/estilo.css
@@ -126,6 +126,7 @@ li {
 }
 */
 
+/*
 ul {
   margin: 0px;
   padding: 0px;
@@ -155,4 +156,45 @@ a:hover {
   background-position: right bottom;
   background-color: #f99200;
   color: #fff
+}
+*/
+
+/**********/
+/* Barra de navegação horizontal */
+ul {
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+  width: 720px;
+  background: #159cb0 url(../imagens/fundo-horizontal.png) repeat-x;
+  float: left;
+}
+
+ul li {
+  float: left;
+}
+
+ul a {
+  display: block;
+  padding: 0 2em;
+  line-height: 2.2em;
+  text-decoration: none;
+  color: #fff;
+  background: url(../imagens/divisor.png) repeat-y left top;
+}
+
+ul .primeiro a {
+  background: none;
+}
+
+ul a:hover {
+  color: #085662;
+  background: #44cade;
+}
+
+#home #navegacao .home a,
+#sobre #navegacao .sobre a,
+#servicos #navegacao .servicos a {
+  color: #085662;
+  background: #44cade;
 }
