--- a/Secao-5-CSS3-Intermediario-e-avancado/css/estilo.css
+++ b/Secao-5-CSS3-Intermediario-e-avancado/css/estilo.css
@@ -161,6 +161,7 @@ a:hover {
 
 /**********/
 /* Barra de navegação horizontal */
+/*
 ul {
   margin: 0px;
   padding: 0px;
@@ -197,4 +198,44 @@ ul a:hover {
 #servicos #navegacao .servicos a {
   color: #085662;
   background: #44cade;
+}
+/*
+
+/**********/
+/* Barra de navegação com abas */
+body {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+ul {
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+  width: 720px;
+}
+
+ul li {
+  float: left;
+  background: url(../imagens/aba-direita.png) no-repeat top right;
+}
+
+li a {
+  display: block;
+  padding: 0 2em;
+  line-height: 3em;
+  text-decoration: none;
+  background: url(../imagens/aba-esquerda.png) no-repeat top left;
+  color: #fff;
+}
+
+ul a:hover {
+  color: #894a1f;
+}
+
+ul #atual {
+  background: url(../imagens/aba-direita-atual.png) no-repeat top right;
+}
+
+ul #atual a {
+  background: url(../imagens/aba-esquerda-atual.png) no-repeat top left;
 }
