--- a/Secao-5-CSS3-Intermediario-e-avancado/css/estilo.css
+++ b/Secao-5-CSS3-Intermediario-e-avancado/css/estilo.css
@@ -203,6 +203,7 @@ ul a:hover {
 
 /**********/
 /* Barra de navegação com abas */
+/*
 body {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
@@ -238,4 +239,71 @@ ul #atual {
 
 ul #atual a {
   background: url(../imagens/aba-esquerda-atual.png) no-repeat top left;
+}
+*/
+
+/**********/
+/* Layouts */
+body {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background: #f2f2f2;
+}
+
+#container {
+  width: 720px;
+  margin: 0 auto;
+  background: #fff;
+}
+
+#marca {
+  height: 100px;
+  background: #9e9e9e;
+  text-align: center;
+  line-height: 100px;
+}
+
+#conteudo {
+  width: 520px;
+  float: right;
+}
+
+#conteudo-principal {
+  width: 320px;
+  float: left;
+}
+
+#conteudo-secundario {
+  width: 180px;
+  float: right;
+  background: #d1d1d1;
+}
+
+#conteudo-secundario h1,
+#conteudo-secundario h2,
+#conteudo-secundario h3,
+#conteudo-secundario p {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#navegacao {
+  width: 180px;
+  float: left;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background: #d1d1d1;
+}
+
+#navegacao ul {
+  list-style: none;
+}
+
+#navegacao li a {
+  text-decoration: none;
+}
+
+#rodape {
+  clear: both;
+  background: #c4c4c4;
+  padding: 5px;
 }
