--- a/Secao-5-CSS3-Intermediario-e-avancado/css/estilo.css
+++ b/Secao-5-CSS3-Intermediario-e-avancado/css/estilo.css
@@ -250,12 +250,15 @@ body {
 }
 
 #container {
-  width: 720px;
+  width: 85%;
   margin: 0 auto;
   background: #fff;
+  min-width: 720px;
+  max-width: 1280px;
 }
 
 #marca {
+  width: 100%;
   height: 100px;
   background: #9e9e9e;
   text-align: center;
@@ -263,17 +266,25 @@ body {
 }
 
 #conteudo {
-  width: 520px;
+  width: 75%;
   float: right;
 }
 
+#navegacao {
+  width: 23%;
+  float: left;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background: #d1d1d1;
+}
+
 #conteudo-principal {
-  width: 320px;
+  width: 63%;
   float: left;
 }
 
 #conteudo-secundario {
-  width: 180px;
+  width: 34%;
   float: right;
   background: #d1d1d1;
 }
@@ -284,14 +295,6 @@ body {
 #conteudo-secundario p {
   padding-left: 20px;
   padding-right: 20px;
-}
-
-#navegacao {
-  width: 180px;
-  float: left;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  background: #d1d1d1;
 }
 
 #navegacao ul {
